fancydialogs: impl exit actions, width, columns (#204)
* fancydialogs - add requirements to buttons & inputs

* fancydialogs - update docs for requirements

* fancydialogs - simplify return

* fancydialogs - fix mutability of the map

makes the map immutable since we are scared of it blowing up

* fancydialogs: string match -> stringMatch

* fancydialogs: implement exit actions, width control, and column control

Mainly for multi_action dialog types to get exit actions (so you can have a footer button to close), add widths to selects, textfields, buttons, and add column control to dialogs.

* fancydialogs: replace get(0) with getFirst()

* fancydialogs - update docs

* fancydialogs - 1 more doc update

* fancydialogs: fix bound checks

almost forgot

* fancydialogs: columns & width int -> Integer