@@ -103,7 +103,8 @@ public class DialogImpl extends Dialog {
                     String label = replaceArgs(textField.getLabel(), args);
                     String placeholder = replaceArgs(textField.getPlaceholder(), args);
                     control = new FS_DialogTextInput(
-                            200, // default width
+                            (textField.getWidth() == null || (textField.getWidth() <= 0 || textField.getWidth() >= 1024))
+                                    ? 200 : textField.getWidth(),
                             ChatColorHandler.translate(label, player, ParserTypes.placeholder()),
                             !label.isEmpty(),
                             ChatColorHandler.translate(placeholder, player, ParserTypes.placeholder()),
@@ -125,7 +126,8 @@ public class DialogImpl extends Dialog {
                     }
                     String selectLabel = replaceArgs(select.getLabel(), args);
                     control = new FS_DialogSingleOptionInput(
-                            200, // default width
+                            (select.getWidth() == null || (select.getWidth() <= 0 || select.getWidth() >= 1024))
+                                    ? 200 : select.getWidth(),
                             entries,
                             ChatColorHandler.translate(selectLabel, player, ParserTypes.placeholder()),
                             !selectLabel.isEmpty()
@@ -150,8 +152,8 @@ public class DialogImpl extends Dialog {
             if (!checkRequirements(player, button.requirements())) { continue; }
 
             if (button.actions().size() == 1 &&
-                button.actions().get(0).name().equals("copy_to_clipboard")) {
-                String clipboardData = replaceArgs(button.actions().get(0).data(), args);
+                button.actions().getFirst().name().equals("copy_to_clipboard")) {
+                String clipboardData = replaceArgs(button.actions().getFirst().data(), args);
                 String text = ChatColorHandler.translate(
                         clipboardData,
                         player,
@@ -176,15 +178,58 @@ public class DialogImpl extends Dialog {
 
             String buttonLabel = replaceArgs(button.label(), args);
             String buttonTooltip = replaceArgs(button.tooltip(), args);
+
             FS_DialogActionButton fsDialogActionButton = new FS_DialogActionButton(
                     new FS_CommonButtonData(
                             ChatColorHandler.translate(buttonLabel, player, ParserTypes.placeholder()),
                             ChatColorHandler.translate(buttonTooltip, player, ParserTypes.placeholder()),
-                            150 // default button width
+                            (button.width() == null || (button.width() <= 0 || button.width() >= 1024))
+                                    ? 150 : button.width()
                     ),
                     buttonAction
             );
             actions.add(fsDialogActionButton);
+        }
+
+        FS_DialogActionButton exitAction = null;
+        if (data.exitAction() != null && checkRequirements(player, data.exitAction().requirements())) {
+            FS_DialogActionButtonAction buttonAction;
+            if (data.exitAction().actions().size() == 1 &&
+                    data.exitAction().actions().getFirst().name().equals("copy_to_clipboard")) {
+                String clipboardData = replaceArgs(data.exitAction().actions().getFirst().data(), args);
+                String text = ChatColorHandler.translate(
+                        clipboardData,
+                        player,
+                        ParserTypes.placeholder()
+                );
+                buttonAction = new FS_DialogCopyToClipboardAction(text);
+            } else {
+                // Build payload with dialog_id, button_id, and all args
+                Map<String, String> payload = new HashMap<>();
+                payload.put("dialog_id", id);
+                payload.put("button_id", data.exitAction().id());
+                if (args != null) {
+                    for (int i = 0; i < args.length; i++) {
+                        payload.put("arg:" + i, args[i] != null ? args[i] : "");
+                    }
+                }
+                buttonAction = new FS_DialogCustomAction(
+                        "fancydialogs_dialog_action",
+                        payload
+                );
+            }
+
+            String buttonLabel = replaceArgs(data.exitAction().label(), args);
+            String buttonTooltip = replaceArgs(data.exitAction().tooltip(), args);
+            exitAction = new FS_DialogActionButton(
+                    new FS_CommonButtonData(
+                            ChatColorHandler.translate(buttonLabel, player, ParserTypes.placeholder()),
+                            ChatColorHandler.translate(buttonTooltip, player, ParserTypes.placeholder()),
+                            (data.exitAction().width() == null || (data.exitAction().width() <= 0 || data.exitAction().width() >= 1024))
+                                    ? 150 : data.exitAction().width()
+                    ),
+                    buttonAction
+            );
         }
 
         String title = replaceArgs(data.title(), args);
@@ -225,8 +270,8 @@ public class DialogImpl extends Dialog {
                         inputs
                 ),
                 actions, // actions
-                null,
-                2
+                exitAction,
+                (data.columns() == null || data.columns() <= 0) ? 2 : data.columns()
         );
     }
 
